# production-fix-flow

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
config/: api_hosts.yaml.example  balanced_training_strategy.json  ensemble.yaml  kg.yaml  metrics_improvement.json  sequences.yaml  transe.yaml  validator.yaml
data/: manifest.yaml  test.json  test1.json
docs/: ANALISE_TRAVAMENTO_PFF_RUN.md  DEPLOYMENT.md  INSTALL.md  WSL_RAM_CONFIG.md
docs/sprints/: OPTIMIZATION_SPRINTS_SUMMARY.md  SPRINT_10_SUMMARY.md  SPRINT_15_BUGS.md  SPRINT_15_COMPLETE.md  SPRINT_15_DISCOVERY.md  SPRINT_15_FIXES_IMPLEMENTED.md  SPRINT_15_TEST_RESULTS.md  SPRINT_16_5_SUMMARY.md  SPRINT_16_PLAN.md  SPRINT_16_SUMMARY.md  SPRINT_17_SUMMARY.md  SPRINT_9_SUMMARY.md
migrations/: env.py
migrations/versions/: 38410b07bd88_change_users_id_to_uuid_for_security.py  473699ca0a14_fix_schema_constraints_indexes_and_.py  a6cdd74efd31_fix_updated_at_triggers_use_clock_.py  c9e34517143e_add_unique_constraint_on_telecom_data_.py  f540435978bc_add_uuid_id_default_gen_random_uuid.py  f624a746bbcc_initial_schema_with_users_telecom_data_.py
pff/: __init__.py  __main__.py  celery_app.py  cli.py  config.py  manifest.py  orchestrator.py  preprocessor.py  tasks.py
pff/api/: __main__.py  auth.py  deps.py  main.py  models.py  security.py
pff/db/: ingestion.py
pff/services/: __init__.py  business_service.py  sequence_service.py
pff/utils/: __init__.py  autofeeding.py  cache.py  cleanup.py  concurrency.py  endpoints.py  file_manager.py  global_interrupt_manager.py  hardware_detector.py  logger.py  ml_training_profiles.py  numba_kernels.py  output.py  polars_extensions.py  research.py  resource_manager.py  tree.ps1
pff/validators/: data_optimizer.py  model.py  (+3 more)
scripts/: init-db.sql  sync.py  test.html  test.py  test1.html
tests/: __init__.py  business_test.py.disabled  conftest.py  miner_test.py.disabled  test_auth.py  test_business_service_violations.py  test_cache.py  test_cache_optimization.py  test_ci_pipeline.py  test_concurrency_memory_safety.py  test_config.py  test_data_optimizer.py  test_database_migrations.py  test_database_performance.py  test_database_schema.py  test_docker_build.py  test_docker_compose.py  test_ensemble.py  test_ensemble_features_dimensions.py  test_ensemble_score_variability.py  test_ensemble_wrappers.py  test_file_manager.py  test_hardware_detector.py  test_health_endpoints.py  test_http_client.py  test_ingestion.py  test_line_service.py  test_memory_fix_rule_validation.py  test_ml_training_profiles.py  test_numba_acceleration.py  test_oom_prevention.py  test_orchestrator_oom_prevention.py  test_schema_edge_cases.py  test_security.py  test_transe_core.py
(+64 files in other folders)
