[tool.poetry]
name = "production-fix-flow"
version = "5.0.0"
description = "Production Fix Flow - Orchestrator for API sequences"
authors = ["Alex Lira"]
readme = "README.md"
packages = [{ include = "pff" }]
source = [
    { name = "pytorch-cpu", url = "https://download.pytorch.org/whl/cpu", priority = "explicit" },
    { name = "pytorch-cu121", url = "https://download.pytorch.org/whl/cu121", priority = "explicit" }
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
aiohttp = "3.12.13"
aiohttp-cors = "0.8.1"
fastapi = "0.115.14"
uvicorn = "0.35.0"
httpx = "0.28.1"
aiodns = "3.5.0"
httptools = "0.6.4"
python-multipart = "0.0.20"
websockets = "15.0.1"
alembic = "1.16.2"
SQLAlchemy = "2.0.41"
asyncpg = "^0.30.0"
celery = "5.5.3"
redis = "6.2.0"
bcrypt = "4.3.0"
cryptography = "45.0.5"
passlib = "1.7.4"
PyJWT = "2.10.1"
polars = "1.31.0"
numpy = "2.2.6"
duckdb = "1.3.1"
fastexcel = "0.14.0"
openpyxl = "3.1.5"
xlsxwriter = "3.2.5"
mlflow = "3.1.1"
optuna = "4.4.0"
scikit-learn = "1.7.0"
lightgbm = "4.6.0"
xgboost = "3.0.2"
shap = "0.48.0"
numba = "0.61.2"
pynvml = "12.0.0"
simpleeval = "1.0.3"
slowapi = "0.1.9"
ray = "2.47.1"
dask = "2025.5.1"
distributed = "2025.5.1"
matplotlib = "3.10.3"
seaborn = "0.13.2"
plotly = "6.2.0"
loguru = "0.7.3"
pydantic = "2.11.7"
pydantic-settings = "2.10.1"
python-dotenv = "1.1.1"
PyYAML = "6.0.2"
rich = "14.0.0"
click = "8.2.1"
tqdm = "4.67.1"
aiofiles = "24.1.0"
aiofile = "3.9.0"
aiobreaker = "1.2.0"
aiocache = "0.12.3"
dependency-injector = "4.48.1"
poetry = "2.1.3"
ipykernel = "6.29.5"
jupyter_client = "8.6.3"
py-spy = "0.4.0"
orjson = "3.10.18"
msgspec = "0.19.0"
"ruamel.yaml" = "0.18.14"
pyarrow = "20.0.0"
waitress = "3.0.2"
docker = "7.1.0"
GitPython = "3.1.44"
genson = "1.3.0"
jsonpath-ng = "1.7.0"
flatdict = "4.0.1"
cattrs = "25.1.1"
pyperclip = "1.9.0"
watchfiles = "1.1.0"
colorlog = "6.9.0"
pyclause = {git = "https://github.com/symbolic-kg/PyClause.git", rev = "87c82ec3dd904767741a493dcbdf7605377d4535"}

[tool.poetry.dependencies.pywin32]
version = "310"
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^0.24.0"
black = "^24.10.0"
flake8 = "^7.3.0"
mypy = "^1.16.1"
ipython = "^9.3.0"

[tool.poetry.scripts]
pff = "pff.cli:cli_entrypoint"

[tool.poetry.extras]
windows = ["pywin32"]
ml = ["torch", "torch-geometric"]

[tool.poetry.dependencies.torch]
version = "2.5.1+cu121"
source = "pytorch-cu121"
optional = true

[tool.poetry.dependencies.torch-geometric]
version = "2.6.1"
optional = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
